feat: adicionar tela de carregamento de autenticação e melhorar fluxo de login e registro feat: implementar tela de depósito rápido com validação de distribuição de ativos feat: criar tela de sincronização de portfólio com upload de carteiras feat: adicionar componente de texto estilizado para consistência visual feat: implementar modal de seleção de estratégia de rebalanceamento fix: ajustar lógica de autenticação e gerenciamento de sessão para web chore: refatorar contexto de autenticação e portfólio para melhor gerenciamento de estado test: adicionar testes e2e para fluxo de depósito rápido e sincronização de portfólio